src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__to_timestamp__impl.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: TimestampTz {
            precision: None,
        },
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: TimestampTz {
            precision: None,
        },
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: None,
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
